fixed login, forget, verify, register

--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -29,10 +29,11 @@
               <!-- Email Input Section -->
               <div class="input-wrap" id="email-section">
                 <input
-                  type="text"
-                  minlength="4"
+                  type="email"
+                  minlength="5"
                   class="input-field"
                   id="email-input"
+                  name="email"
                   autocomplete="off"
                   placeholder="Enter Email"
                   required
@@ -44,6 +45,7 @@
                   minlength="8"
                   class="input-field"
                   id="new_password"
+                  name="new_password"
                   autocomplete="off"
                   placeholder="Enter New Password"
                   required
