--- a/templates/verify.html
+++ b/templates/verify.html
@@ -32,7 +32,8 @@
                   type="text"
                   id="code"
                   name="code"
-                  minlength="4"
+                  minlength="6"
+                  maxlength="6"
                   class="input-field"
                   autocomplete="off"
                   placeholder="Enter Verification Code"
