--- a/templates/spiaalatest.html
+++ b/templates/spiaalatest.html
@@ -26,6 +26,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" href="{{ url_for('home') }}">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="{{ url_for('stock_monitoring') }}">Stock Monitoring</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('signout') }}">Sign Out</a></li>
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item">
