--- a/templates/stockmonitoring.html
+++ b/templates/stockmonitoring.html
@@ -6,42 +6,46 @@
   <title>SwiftStock - My Portfolio</title>
   <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
   <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 <body>
-  <nav class="navbar navbar-expand-md bg-dark py-2" data-bs-theme="dark">
+  <nav class="navbar navbar-expand-md bg-dark navbar-dark py-2">
     <div class="container">
-        <a class="navbar-brand d-flex align-items-center" href="{{ url_for('home') }}">
-          <span class="bs-icon-sm d-flex justify-content-center align-items-center me-3">
-            <img src="{{ url_for('static', filename='images/logo.svg') }}" 
-            alt="Logo" 
-            class="logo-img"
-            style="filter: invert(1) brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);">
-                 
+      <!-- Logo -->
+      <a class="navbar-brand d-flex align-items-center" href="{{ url_for('home') }}">
+        <span class="bs-icon-sm d-flex justify-content-center align-items-center me-3">
+          <img src="{{ url_for('static', filename='images/logo.svg') }}" 
+               alt="Logo" 
+               class="logo-img"
+               style="filter: invert(1) brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%); padding-left: 35px;">
         </span>
-          
-          <!-- Removed Real-Time Stock Price Analysis name -->
       </a>
-      <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5">
-        <span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
+
+      <!-- Toggler -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navcol-5">
+
+      <!-- Collapsible Section -->
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="{{ url_for('home') }}">Home</a></li>
           <li class="nav-item"><a class="nav-link active" href="{{ url_for('stock_monitoring') }}">Stock Monitoring</a></li>
           <li class="nav-item"><a class="nav-link" href="{{ url_for('signout') }}">Sign Out</a></li>
         </ul>
+        <!-- Search Bar -->
         <ul class="navbar-nav">
           <li class="nav-item">
             <div style="position: relative;">
-              <input type="text" id="search" placeholder="Search Stocks">
+              <input type="text" id="search" placeholder="Search Stocks" style = "background-color: black;">
               <div id="suggestions" style="background-color:#eee;"></div>
             </div>
           </li>
-        </ul>
       </div>
     </div>
   </nav>
+  
 
  <!-- Trending Stocks Section -->
 <div class="container mt-5">
@@ -101,6 +105,8 @@
       });
     }
 
+
+
     // Initialize the chart
     Plotly.newPlot('lineChart', chartData, {
       xaxis: { title: 'Date' },
@@ -110,6 +116,8 @@
     });
     window.addEventListener('resize', resizeChart);
     resizeChart();
+
+    
   </script>
 </body>
 </html>
